2009-07-14  Darin Fisher  <darin@chromium.org>

Reviewed by Darin Adler.

        Fails to save document state when navigating away from a page with a
        reference fragment.
        https://bugs.webkit.org/show_bug.cgi?id=27281

        Test: fast/history/saves-state-after-fragment-nav.html

        * history/HistoryItem.cpp:
        (WebCore::HistoryItem::isCurrentDocument): Use equalIgnoringRef
        to compare URLs.



Canonical link: https://commits.webkit.org/37520@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45890 268f45cc-cd09-0410-ab3c-d52691b4dbfc